objects/SAP_Product_Interface__c.object
<CustomObject>
    <fields>
        <fullName>Auth_Header_Name__c</fullName>
        <label>Auth Header Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <label>Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SAP Product Interface</label>
</CustomObject>